Parser/Michael/pl0.output
Grammar

    0 $accept: program $end

    1 program: block "."

    2 block: constDecls varDecls procDecls stmt

    3 constDecls: empty
    4           | constDecls constDecl

    5 varDecls: empty
    6         | varDecls varDecl

    7 varDecl: "var" idents ";"

    8 idents: identsym
    9       | idents "," identsym

   10 procDecls: empty
   11          | procDecls procDecl

   12 empty: ε

   13 constDecl: "const" constDefs ";"

   14 constDef: identsym "=" numbersym

   15 constDefs: constDef
   16          | constDefs "," constDef

   17 procDecl: "procedure" identsym ";" block ";"

   18 stmt: assignStmt
   19     | callStmt
   20     | beginStmt
   21     | ifStmt
   22     | whileStmt
   23     | readStmt
   24     | writeStmt
   25     | skipStmt

   26 assignStmt: identsym ":=" expr

   27 callStmt: "call" identsym

   28 beginStmt: "begin" stmts "end"

   29 ifStmt: "if" condition "then" stmt "else" stmt

   30 whileStmt: "while" condition "do" stmt

   31 readStmt: "read" identsym

   32 writeStmt: "write" expr

   33 skipStmt: "skip"

   34 stmts: stmt
   35      | stmts ";" stmt

   36 condition: oddCondition
   37          | relOpCondition

   38 oddCondition: "odd" expr

   39 relOpCondition: expr relOp expr

   40 relOp: "="
   41      | "<>"
   42      | "<"
   43      | "<="
   44      | ">"
   45      | ">="

   46 expr: term
   47     | expr "+" term
   48     | expr "-" term

   49 term: factor
   50     | term "*" factor
   51     | term "/" factor

   52 factor: identsym
   53       | "-" numbersym
   54       | numbersym
   55       | posSign numbersym
   56       | "(" expr ")"

   57 posSign: "+"


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    identsym <ident> (258) 8 9 14 17 26 27 31 52
    numbersym <number> (259) 14 53 54 55
    "+" <token> (260) 47 57
    "-" <token> (261) 48 53
    "*" <token> (262) 50
    "/" <token> (263) 51
    "." <token> (264) 1
    ";" <token> (265) 7 13 17 35
    "=" <token> (266) 14 40
    "," <token> (267) 9 16
    ":=" <token> (268) 26
    "const" <token> (269) 13
    "var" <token> (270) 7
    "procedure" <token> (271) 17
    "call" <token> (272) 27
    "begin" <token> (273) 28
    "end" <token> (274) 28
    "if" <token> (275) 29
    "then" <token> (276) 29
    "else" <token> (277) 29
    "while" <token> (278) 30
    "do" <token> (279) 30
    "read" <token> (280) 31
    "write" <token> (281) 32
    "skip" <token> (282) 33
    "odd" <token> (283) 38
    "<>" <token> (284) 41
    "<" <token> (285) 42
    "<=" <token> (286) 43
    ">" <token> (287) 44
    ">=" <token> (288) 45
    "(" <token> (289) 56
    ")" <token> (290) 56


Nonterminals, with rules where they appear

    $accept (36)
        on left: 0
    program <block> (37)
        on left: 1
        on right: 0
    block <block> (38)
        on left: 2
        on right: 1 17
    constDecls <const_decls> (39)
        on left: 3 4
        on right: 2 4
    varDecls <var_decls> (40)
        on left: 5 6
        on right: 2 6
    varDecl <var_decl> (41)
        on left: 7
        on right: 6
    idents <idents> (42)
        on left: 8 9
        on right: 7 9
    procDecls <proc_decls> (43)
        on left: 10 11
        on right: 2 11
    empty <empty> (44)
        on left: 12
        on right: 3 5 10
    constDecl <const_decl> (45)
        on left: 13
        on right: 4
    constDef <const_def> (46)
        on left: 14
        on right: 15 16
    constDefs <const_defs> (47)
        on left: 15 16
        on right: 13 16
    procDecl <proc_decl> (48)
        on left: 17
        on right: 11
    stmt <stmt> (49)
        on left: 18 19 20 21 22 23 24 25
        on right: 2 29 30 34 35
    assignStmt <assign_stmt> (50)
        on left: 26
        on right: 18
    callStmt <call_stmt> (51)
        on left: 27
        on right: 19
    beginStmt <begin_stmt> (52)
        on left: 28
        on right: 20
    ifStmt <if_stmt> (53)
        on left: 29
        on right: 21
    whileStmt <while_stmt> (54)
        on left: 30
        on right: 22
    readStmt <read_stmt> (55)
        on left: 31
        on right: 23
    writeStmt <write_stmt> (56)
        on left: 32
        on right: 24
    skipStmt <skip_stmt> (57)
        on left: 33
        on right: 25
    stmts <stmts> (58)
        on left: 34 35
        on right: 28 35
    condition <condition> (59)
        on left: 36 37
        on right: 29 30
    oddCondition <odd_condition> (60)
        on left: 38
        on right: 36
    relOpCondition <rel_op_condition> (61)
        on left: 39
        on right: 37
    relOp <token> (62)
        on left: 40 41 42 43 44 45
        on right: 39
    expr <expr> (63)
        on left: 46 47 48
        on right: 26 32 38 39 47 48 56
    term <expr> (64)
        on left: 49 50 51
        on right: 46 47 48 50 51
    factor <expr> (65)
        on left: 52 53 54 55 56
        on right: 49 50 51
    posSign <token> (66)
        on left: 57
        on right: 55


State 0

    0 $accept: • program $end

    $default  reduce using rule 12 (empty)

    program     go to state 1
    block       go to state 2
    constDecls  go to state 3
    empty       go to state 4


State 1

    0 $accept: program • $end

    $end  shift, and go to state 5


State 2

    1 program: block • "."

    "."  shift, and go to state 6


State 3

    2 block: constDecls • varDecls procDecls stmt
    4 constDecls: constDecls • constDecl

    "const"  shift, and go to state 7

    $default  reduce using rule 12 (empty)

    varDecls   go to state 8
    empty      go to state 9
    constDecl  go to state 10


State 4

    3 constDecls: empty •

    $default  reduce using rule 3 (constDecls)


State 5

    0 $accept: program $end •

    $default  accept


State 6

    1 program: block "." •

    $default  reduce using rule 1 (program)


State 7

   13 constDecl: "const" • constDefs ";"

    identsym  shift, and go to state 11

    constDef   go to state 12
    constDefs  go to state 13


State 8

    2 block: constDecls varDecls • procDecls stmt
    6 varDecls: varDecls • varDecl

    "var"  shift, and go to state 14

    $default  reduce using rule 12 (empty)

    varDecl    go to state 15
    procDecls  go to state 16
    empty      go to state 17


State 9

    5 varDecls: empty •

    $default  reduce using rule 5 (varDecls)


State 10

    4 constDecls: constDecls constDecl •

    $default  reduce using rule 4 (constDecls)


State 11

   14 constDef: identsym • "=" numbersym

    "="  shift, and go to state 18


State 12

   15 constDefs: constDef •

    $default  reduce using rule 15 (constDefs)


State 13

   13 constDecl: "const" constDefs • ";"
   16 constDefs: constDefs • "," constDef

    ";"  shift, and go to state 19
    ","  shift, and go to state 20


State 14

    7 varDecl: "var" • idents ";"

    identsym  shift, and go to state 21

    idents  go to state 22


State 15

    6 varDecls: varDecls varDecl •

    $default  reduce using rule 6 (varDecls)


State 16

    2 block: constDecls varDecls procDecls • stmt
   11 procDecls: procDecls • procDecl

    identsym     shift, and go to state 23
    "procedure"  shift, and go to state 24
    "call"       shift, and go to state 25
    "begin"      shift, and go to state 26
    "if"         shift, and go to state 27
    "while"      shift, and go to state 28
    "read"       shift, and go to state 29
    "write"      shift, and go to state 30
    "skip"       shift, and go to state 31

    procDecl    go to state 32
    stmt        go to state 33
    assignStmt  go to state 34
    callStmt    go to state 35
    beginStmt   go to state 36
    ifStmt      go to state 37
    whileStmt   go to state 38
    readStmt    go to state 39
    writeStmt   go to state 40
    skipStmt    go to state 41


State 17

   10 procDecls: empty •

    $default  reduce using rule 10 (procDecls)


State 18

   14 constDef: identsym "=" • numbersym

    numbersym  shift, and go to state 42


State 19

   13 constDecl: "const" constDefs ";" •

    $default  reduce using rule 13 (constDecl)


State 20

   16 constDefs: constDefs "," • constDef

    identsym  shift, and go to state 11

    constDef  go to state 43


State 21

    8 idents: identsym •

    $default  reduce using rule 8 (idents)


State 22

    7 varDecl: "var" idents • ";"
    9 idents: idents • "," identsym

    ";"  shift, and go to state 44
    ","  shift, and go to state 45


State 23

   26 assignStmt: identsym • ":=" expr

    ":="  shift, and go to state 46


State 24

   17 procDecl: "procedure" • identsym ";" block ";"

    identsym  shift, and go to state 47


State 25

   27 callStmt: "call" • identsym

    identsym  shift, and go to state 48


State 26

   28 beginStmt: "begin" • stmts "end"

    identsym  shift, and go to state 23
    "call"    shift, and go to state 25
    "begin"   shift, and go to state 26
    "if"      shift, and go to state 27
    "while"   shift, and go to state 28
    "read"    shift, and go to state 29
    "write"   shift, and go to state 30
    "skip"    shift, and go to state 31

    stmt        go to state 49
    assignStmt  go to state 34
    callStmt    go to state 35
    beginStmt   go to state 36
    ifStmt      go to state 37
    whileStmt   go to state 38
    readStmt    go to state 39
    writeStmt   go to state 40
    skipStmt    go to state 41
    stmts       go to state 50


State 27

   29 ifStmt: "if" • condition "then" stmt "else" stmt

    identsym   shift, and go to state 51
    numbersym  shift, and go to state 52
    "+"        shift, and go to state 53
    "-"        shift, and go to state 54
    "odd"      shift, and go to state 55
    "("        shift, and go to state 56

    condition       go to state 57
    oddCondition    go to state 58
    relOpCondition  go to state 59
    expr            go to state 60
    term            go to state 61
    factor          go to state 62
    posSign         go to state 63


State 28

   30 whileStmt: "while" • condition "do" stmt

    identsym   shift, and go to state 51
    numbersym  shift, and go to state 52
    "+"        shift, and go to state 53
    "-"        shift, and go to state 54
    "odd"      shift, and go to state 55
    "("        shift, and go to state 56

    condition       go to state 64
    oddCondition    go to state 58
    relOpCondition  go to state 59
    expr            go to state 60
    term            go to state 61
    factor          go to state 62
    posSign         go to state 63


State 29

   31 readStmt: "read" • identsym

    identsym  shift, and go to state 65


State 30

   32 writeStmt: "write" • expr

    identsym   shift, and go to state 51
    numbersym  shift, and go to state 52
    "+"        shift, and go to state 53
    "-"        shift, and go to state 54
    "("        shift, and go to state 56

    expr     go to state 66
    term     go to state 61
    factor   go to state 62
    posSign  go to state 63


State 31

   33 skipStmt: "skip" •

    $default  reduce using rule 33 (skipStmt)


State 32

   11 procDecls: procDecls procDecl •

    $default  reduce using rule 11 (procDecls)


State 33

    2 block: constDecls varDecls procDecls stmt •

    $default  reduce using rule 2 (block)


State 34

   18 stmt: assignStmt •

    $default  reduce using rule 18 (stmt)


State 35

   19 stmt: callStmt •

    $default  reduce using rule 19 (stmt)


State 36

   20 stmt: beginStmt •

    $default  reduce using rule 20 (stmt)


State 37

   21 stmt: ifStmt •

    $default  reduce using rule 21 (stmt)


State 38

   22 stmt: whileStmt •

    $default  reduce using rule 22 (stmt)


State 39

   23 stmt: readStmt •

    $default  reduce using rule 23 (stmt)


State 40

   24 stmt: writeStmt •

    $default  reduce using rule 24 (stmt)


State 41

   25 stmt: skipStmt •

    $default  reduce using rule 25 (stmt)


State 42

   14 constDef: identsym "=" numbersym •

    $default  reduce using rule 14 (constDef)


State 43

   16 constDefs: constDefs "," constDef •

    $default  reduce using rule 16 (constDefs)


State 44

    7 varDecl: "var" idents ";" •

    $default  reduce using rule 7 (varDecl)


State 45

    9 idents: idents "," • identsym

    identsym  shift, and go to state 67


State 46

   26 assignStmt: identsym ":=" • expr

    identsym   shift, and go to state 51
    numbersym  shift, and go to state 52
    "+"        shift, and go to state 53
    "-"        shift, and go to state 54
    "("        shift, and go to state 56

    expr     go to state 68
    term     go to state 61
    factor   go to state 62
    posSign  go to state 63


State 47

   17 procDecl: "procedure" identsym • ";" block ";"

    ";"  shift, and go to state 69


State 48

   27 callStmt: "call" identsym •

    $default  reduce using rule 27 (callStmt)


State 49

   34 stmts: stmt •

    $default  reduce using rule 34 (stmts)


State 50

   28 beginStmt: "begin" stmts • "end"
   35 stmts: stmts • ";" stmt

    ";"    shift, and go to state 70
    "end"  shift, and go to state 71


State 51

   52 factor: identsym •

    $default  reduce using rule 52 (factor)


State 52

   54 factor: numbersym •

    $default  reduce using rule 54 (factor)


State 53

   57 posSign: "+" •

    $default  reduce using rule 57 (posSign)


State 54

   53 factor: "-" • numbersym

    numbersym  shift, and go to state 72


State 55

   38 oddCondition: "odd" • expr

    identsym   shift, and go to state 51
    numbersym  shift, and go to state 52
    "+"        shift, and go to state 53
    "-"        shift, and go to state 54
    "("        shift, and go to state 56

    expr     go to state 73
    term     go to state 61
    factor   go to state 62
    posSign  go to state 63


State 56

   56 factor: "(" • expr ")"

    identsym   shift, and go to state 51
    numbersym  shift, and go to state 52
    "+"        shift, and go to state 53
    "-"        shift, and go to state 54
    "("        shift, and go to state 56

    expr     go to state 74
    term     go to state 61
    factor   go to state 62
    posSign  go to state 63


State 57

   29 ifStmt: "if" condition • "then" stmt "else" stmt

    "then"  shift, and go to state 75


State 58

   36 condition: oddCondition •

    $default  reduce using rule 36 (condition)


State 59

   37 condition: relOpCondition •

    $default  reduce using rule 37 (condition)


State 60

   39 relOpCondition: expr • relOp expr
   47 expr: expr • "+" term
   48     | expr • "-" term

    "+"   shift, and go to state 76
    "-"   shift, and go to state 77
    "="   shift, and go to state 78
    "<>"  shift, and go to state 79
    "<"   shift, and go to state 80
    "<="  shift, and go to state 81
    ">"   shift, and go to state 82
    ">="  shift, and go to state 83

    relOp  go to state 84


State 61

   46 expr: term •
   50 term: term • "*" factor
   51     | term • "/" factor

    "*"  shift, and go to state 85
    "/"  shift, and go to state 86

    $default  reduce using rule 46 (expr)


State 62

   49 term: factor •

    $default  reduce using rule 49 (term)


State 63

   55 factor: posSign • numbersym

    numbersym  shift, and go to state 87


State 64

   30 whileStmt: "while" condition • "do" stmt

    "do"  shift, and go to state 88


State 65

   31 readStmt: "read" identsym •

    $default  reduce using rule 31 (readStmt)


State 66

   32 writeStmt: "write" expr •
   47 expr: expr • "+" term
   48     | expr • "-" term

    "+"  shift, and go to state 76
    "-"  shift, and go to state 77

    $default  reduce using rule 32 (writeStmt)


State 67

    9 idents: idents "," identsym •

    $default  reduce using rule 9 (idents)


State 68

   26 assignStmt: identsym ":=" expr •
   47 expr: expr • "+" term
   48     | expr • "-" term

    "+"  shift, and go to state 76
    "-"  shift, and go to state 77

    $default  reduce using rule 26 (assignStmt)


State 69

   17 procDecl: "procedure" identsym ";" • block ";"

    $default  reduce using rule 12 (empty)

    block       go to state 89
    constDecls  go to state 3
    empty       go to state 4


State 70

   35 stmts: stmts ";" • stmt

    identsym  shift, and go to state 23
    "call"    shift, and go to state 25
    "begin"   shift, and go to state 26
    "if"      shift, and go to state 27
    "while"   shift, and go to state 28
    "read"    shift, and go to state 29
    "write"   shift, and go to state 30
    "skip"    shift, and go to state 31

    stmt        go to state 90
    assignStmt  go to state 34
    callStmt    go to state 35
    beginStmt   go to state 36
    ifStmt      go to state 37
    whileStmt   go to state 38
    readStmt    go to state 39
    writeStmt   go to state 40
    skipStmt    go to state 41


State 71

   28 beginStmt: "begin" stmts "end" •

    $default  reduce using rule 28 (beginStmt)


State 72

   53 factor: "-" numbersym •

    $default  reduce using rule 53 (factor)


State 73

   38 oddCondition: "odd" expr •
   47 expr: expr • "+" term
   48     | expr • "-" term

    "+"  shift, and go to state 76
    "-"  shift, and go to state 77

    $default  reduce using rule 38 (oddCondition)


State 74

   47 expr: expr • "+" term
   48     | expr • "-" term
   56 factor: "(" expr • ")"

    "+"  shift, and go to state 76
    "-"  shift, and go to state 77
    ")"  shift, and go to state 91


State 75

   29 ifStmt: "if" condition "then" • stmt "else" stmt

    identsym  shift, and go to state 23
    "call"    shift, and go to state 25
    "begin"   shift, and go to state 26
    "if"      shift, and go to state 27
    "while"   shift, and go to state 28
    "read"    shift, and go to state 29
    "write"   shift, and go to state 30
    "skip"    shift, and go to state 31

    stmt        go to state 92
    assignStmt  go to state 34
    callStmt    go to state 35
    beginStmt   go to state 36
    ifStmt      go to state 37
    whileStmt   go to state 38
    readStmt    go to state 39
    writeStmt   go to state 40
    skipStmt    go to state 41


State 76

   47 expr: expr "+" • term

    identsym   shift, and go to state 51
    numbersym  shift, and go to state 52
    "+"        shift, and go to state 53
    "-"        shift, and go to state 54
    "("        shift, and go to state 56

    term     go to state 93
    factor   go to state 62
    posSign  go to state 63


State 77

   48 expr: expr "-" • term

    identsym   shift, and go to state 51
    numbersym  shift, and go to state 52
    "+"        shift, and go to state 53
    "-"        shift, and go to state 54
    "("        shift, and go to state 56

    term     go to state 94
    factor   go to state 62
    posSign  go to state 63


State 78

   40 relOp: "=" •

    $default  reduce using rule 40 (relOp)


State 79

   41 relOp: "<>" •

    $default  reduce using rule 41 (relOp)


State 80

   42 relOp: "<" •

    $default  reduce using rule 42 (relOp)


State 81

   43 relOp: "<=" •

    $default  reduce using rule 43 (relOp)


State 82

   44 relOp: ">" •

    $default  reduce using rule 44 (relOp)


State 83

   45 relOp: ">=" •

    $default  reduce using rule 45 (relOp)


State 84

   39 relOpCondition: expr relOp • expr

    identsym   shift, and go to state 51
    numbersym  shift, and go to state 52
    "+"        shift, and go to state 53
    "-"        shift, and go to state 54
    "("        shift, and go to state 56

    expr     go to state 95
    term     go to state 61
    factor   go to state 62
    posSign  go to state 63


State 85

   50 term: term "*" • factor

    identsym   shift, and go to state 51
    numbersym  shift, and go to state 52
    "+"        shift, and go to state 53
    "-"        shift, and go to state 54
    "("        shift, and go to state 56

    factor   go to state 96
    posSign  go to state 63


State 86

   51 term: term "/" • factor

    identsym   shift, and go to state 51
    numbersym  shift, and go to state 52
    "+"        shift, and go to state 53
    "-"        shift, and go to state 54
    "("        shift, and go to state 56

    factor   go to state 97
    posSign  go to state 63


State 87

   55 factor: posSign numbersym •

    $default  reduce using rule 55 (factor)


State 88

   30 whileStmt: "while" condition "do" • stmt

    identsym  shift, and go to state 23
    "call"    shift, and go to state 25
    "begin"   shift, and go to state 26
    "if"      shift, and go to state 27
    "while"   shift, and go to state 28
    "read"    shift, and go to state 29
    "write"   shift, and go to state 30
    "skip"    shift, and go to state 31

    stmt        go to state 98
    assignStmt  go to state 34
    callStmt    go to state 35
    beginStmt   go to state 36
    ifStmt      go to state 37
    whileStmt   go to state 38
    readStmt    go to state 39
    writeStmt   go to state 40
    skipStmt    go to state 41


State 89

   17 procDecl: "procedure" identsym ";" block • ";"

    ";"  shift, and go to state 99


State 90

   35 stmts: stmts ";" stmt •

    $default  reduce using rule 35 (stmts)


State 91

   56 factor: "(" expr ")" •

    $default  reduce using rule 56 (factor)


State 92

   29 ifStmt: "if" condition "then" stmt • "else" stmt

    "else"  shift, and go to state 100


State 93

   47 expr: expr "+" term •
   50 term: term • "*" factor
   51     | term • "/" factor

    "*"  shift, and go to state 85
    "/"  shift, and go to state 86

    $default  reduce using rule 47 (expr)


State 94

   48 expr: expr "-" term •
   50 term: term • "*" factor
   51     | term • "/" factor

    "*"  shift, and go to state 85
    "/"  shift, and go to state 86

    $default  reduce using rule 48 (expr)


State 95

   39 relOpCondition: expr relOp expr •
   47 expr: expr • "+" term
   48     | expr • "-" term

    "+"  shift, and go to state 76
    "-"  shift, and go to state 77

    $default  reduce using rule 39 (relOpCondition)


State 96

   50 term: term "*" factor •

    $default  reduce using rule 50 (term)


State 97

   51 term: term "/" factor •

    $default  reduce using rule 51 (term)


State 98

   30 whileStmt: "while" condition "do" stmt •

    $default  reduce using rule 30 (whileStmt)


State 99

   17 procDecl: "procedure" identsym ";" block ";" •

    $default  reduce using rule 17 (procDecl)


State 100

   29 ifStmt: "if" condition "then" stmt "else" • stmt

    identsym  shift, and go to state 23
    "call"    shift, and go to state 25
    "begin"   shift, and go to state 26
    "if"      shift, and go to state 27
    "while"   shift, and go to state 28
    "read"    shift, and go to state 29
    "write"   shift, and go to state 30
    "skip"    shift, and go to state 31

    stmt        go to state 101
    assignStmt  go to state 34
    callStmt    go to state 35
    beginStmt   go to state 36
    ifStmt      go to state 37
    whileStmt   go to state 38
    readStmt    go to state 39
    writeStmt   go to state 40
    skipStmt    go to state 41


State 101

   29 ifStmt: "if" condition "then" stmt "else" stmt •

    $default  reduce using rule 29 (ifStmt)
